syntax = "proto3";

package context.v1;

option go_package = "github.com/powertoolsdev/mono/pkg/types/components/context/v1";

message AwsAccount {
  bool federated = 1;
  string region = 2;
}

message AzureAccount {
  string location = 1;
  string subscription_id = 2;
  string tenant_id = 3;
  string client_id = 4;
  string client_secret = 5;
}

// InstallContext is a context for passing information about an install
message InstallContext {
  AzureAccount azure_account = 1;
  AwsAccount aws_account = 2;
}
